Bump dependencies, fix width issue caused by scrollbar behavior on MacOS

--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@ html, body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    min-width: 100vw;
+    min-width: 100%;
     min-height: 100vh;
     background-color: #121212;
     padding: 0;
